--- a/config.toml
+++ b/config.toml
@@ -10,43 +10,21 @@ paginate = 10
   dateformNum     = "2006-01-02"
   dateformNumTime = "2006-01-02 15:04"
 
-  # Subtitle for home
-  homeSubtitle = "A simple and beautiful blog"
+  enableRobotsTXT = true
 
-  # Set disableReadOtherPosts to true in order to hide the links to other posts.
-  disableReadOtherPosts = false
+  geekdocBackToTop = false
 
-  # Enable sharing buttons, if you like
-  enableSharingButtons = true
 
-  # Metadata mostly used in document's head
-  description = "My new homepage or blog"
-  keywords = "homepage, blog"
-  images = [""]
+  # geekdocPrivacyPolicy = "/privacy"
+  geekdocOverwriteHTMLBase = false
+
+
+  # geekdocLegalNotice = "https://blog.example.com/legal"
+
+
+[params.geekdocContentLicense]
+  name = "粤ICP备2021164354号-1"
+  link = "https://beian.miit.gov.cn <a>"
 
 [taxonomies]
-    category = "blog"
-    tag      = "tags"
-    series   = "series"
-
-[languages]
-  [languages.en]
-    title = "Hello Cat Friends"
-    subtitle = "A sharing platform for cat friends"
-    keywords = "猫，宠物猫，养猫经验"
-    copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
-    readOtherPosts = "Read other posts"
-
-    [languages.en.params.logo]
-      logoText = "maofriend"
-      logoHomeLink = "/"
-    # or
-    #
-    # path = "/img/your-example-logo.svg"
-    # alt = "Your example logo alt text"
-
-  # And you can even create generic menu
-  [[menu.main]]
-    identifier = "blog"
-    name       = "Blog"
-    url        = "/posts"
+  tag = "tags"
