--- a/data/menu/more.yaml
+++ b/data/menu/more.yaml
@@ -3,11 +3,7 @@ more:
   - name: News
     ref: "/#"
     icon: "gdoc_notification"
-  - name: Releases
-    ref: "https://github.com/thegeeklab/hugo-geekdoc/releases"
-    external: true
-    icon: "gdoc_download"
   - name: "View Source"
-    ref: "https://github.com/thegeeklab/hugo-geekdoc"
+    ref: "https://github.com/dxx99/dxx99"
     external: true
     icon: "gdoc_github"
